--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(src/compiler)
 add_subdirectory(src/launcher)
 add_subdirectory(src/smodel)
 add_subdirectory(src/object_model)
+add_subdirectory(src/generator)
